--- a/page.html
+++ b/page.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Simple Web Page</title>
+    <title>Index Page</title>
   </head>
   <body>
-    <h1>Test Web Page</h1>
+    <h1>Sample Index Page</h1>
     <p>My web server served this page!</p>
   </body>
 </html>
